--- a/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Fertigungsteil/Index.cshtml
@@ -1,37 +1,46 @@
 ﻿@model IEnumerable<ZeiterfassungPierburg.Models.Fertigungsteil>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ZeichenNr)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Bezeichnung)
-        </th>
+<section class="content-header">
+    <h1>Teile</h1>
+</section>
+<section class="content container-fluid">
+    <div class="box-header with-border">
+        <div class="box box-info">
+            <div class="box-header with-border">
+                <table class="table table-striped">
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.ZeichenNr)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Bezeichnung)
+                        </th>
 
-        <th>
+                        <th>
 
-        </th>
-    </tr>
+                        </th>
+                    </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ZeichenNr)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Bezeichnung)
-            </td>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ZeichenNr)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Bezeichnung)
+                            </td>
 
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID }, new { onclick = "return confirm('Are sure wants to delete?');" })
-            </td>
-        </tr>
-    }
+                            <td>
+                                @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
+                                @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
+                            </td>
+                        </tr>
+                    }
 
-</table>
+                </table>
+                @Html.ActionLink("Hinzufügen", "Create", null, new { @class = "pull-left btn btn-default", @type = "button", })
+            </div>
+        </div>
+    </div>
+</section>
