--- a/ZeiterfassungPierburg/Views/Mitarbeiter/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/Mitarbeiter/Index.cshtml
@@ -1,72 +1,87 @@
 ﻿@model IEnumerable<ZeiterfassungPierburg.Models.Mitarbeiter>
 
-<section class="content-header">
-    <h1>Mitarbeiter*innen</h1>
-</section>
+
 <section class="content container-fluid">
     <div class="box-header with-border">
         <div class="box box-info">
             <div class="box-header with-border">
-                <table class="table table-striped">
-                    <tr>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Kostenstelle)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Personalnummer)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Nachname)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Vorname)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Abrechnungskreis)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Mitarbeiterkreis)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.Beschäftigungsart)
-                        </th>
-                        <th></th>
-                    </tr>
-
-                    @foreach (var item in Model)
-                    {
+                <h3>Übersicht der Mitarbeiter*innen</h3>
+                <table id="example" class="table table-striped table-bordered" style="width:100%">
+                    <thead>
                         <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Kostenstelle)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Personalnummer)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Nachname)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Vorname)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Abrechnungskreis)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Mitarbeiterkreis)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Beschäftigungsart)
-                            </td>
-                            <td>
-                                @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
-                                @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
-                            </td>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Kostenstelle)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Personalnummer)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Nachname)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Vorname)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Abrechnungskreis)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Mitarbeiterkreis)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Beschäftigungsart)
+                            </th>
+                            <th>
+
+                            </th>
                         </tr>
-                    }
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Kostenstelle)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Personalnummer)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Nachname)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Vorname)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Abrechnungskreis)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Mitarbeiterkreis)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Beschäftigungsart)
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
+                                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
                 </table>
+                <h4>@ViewBag.MitarbeiterMessage</h4>
                 @Html.ActionLink("Hinzufügen", "Create", null, new { @class = "pull-left btn btn-default", @type = "button", })
             </div>
         </div>
     </div>
 </section>
+@section scripts{
+    @Styles.Render("~/bundles/tableStyleBundle")
+    @Scripts.Render("~/bundles/tableScriptBundle")
+
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
 
