--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/Index.cshtml
@@ -67,8 +67,14 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Bemerkung)
                             </th>
+                            <!--
+    <th>
+        @Html.DisplayNameFor(model => model.Auswertung)
+    </th>
+        -->
+
                             <th>
-                                @Html.DisplayNameFor(model => model.Auswertung)
+                                @Html.DisplayNameFor(model => model.IstInSAPEingetragen)
                             </th>
 
                             <th></th>
@@ -77,59 +83,62 @@
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            <tr value="@item.ID">
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Datum)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Art)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Anlage)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
+                        <tr value="@item.ID" , id="row+@item.ID">
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Datum)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Art)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Anlage)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Name)
+                            </td>
 
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Personalnummer)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Kostenstelle)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.SAPAPNr)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ZeichenNr)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Stück)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DirStunden)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.InDirStunden)
-                                </td>
-                                <td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Personalnummer)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Kostenstelle)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.SAPAPNr)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.ZeichenNr)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Stück)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DirStunden)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.InDirStunden)
+                            </td>
+                            <td>
 
                                 @Html.DisplayFor(modelItem => item.Bemerkung)
-                                </td>
-                                <!--<td>
-                                    @Html.DisplayFor(modelItem => item.Auswertung)%
-                                </td>
-                                    -->
-                                <td>
+                            </td>
+                            <td>
+
+                                <input type="checkbox" href="#" id="eintragen_@item.ID" name="eintragen" value="@item.ID" style="height: 15px; width: 100%; margin: auto;">
+                            </td>
+                            <!--
+        <td>
+        @Html.DisplayFor(modelItem => item.Auswertung)%
+    </td>
+        -->
+                            <td>
 
                                 @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
                                 @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
-                                <!--@Html.ActionLink("Eintragen", "Eintragen", new { istEingetragen = true, id = item.ID })
-        @Html.ActionLink("Austragen", "Eintragen", new { istEingetragen = false }, new { id = item.ID })-->
-                                    <p id="@item.ID" hidden>@item.IstInSAPEingetragen</p> <!-- keep value of istINSAPEingetragen becaue the boolen value can't be passed as attribute (dunno why)-->
-                                    | <a href="#" id="eintragen_@item.ID" name="eintragen" value="@item.ID">Eintragen</a>
-                                </td>
-                            </tr>
+
+                                <p id="@item.ID" hidden>@item.IstInSAPEingetragen</p> <!-- keep value of istINSAPEingetragen becaue the boolen value can't be passed as attribute (dunno why)-->
+                            </td>
+                        </tr>
                         }
                     </tbody>
                 </table>
@@ -187,21 +196,20 @@
         var rowLength = table.rows.length;
         for (var i = 0; i < rowLength; i += 1) {
 
-
             var row = table.rows[i];
+            var id = row.getAttribute('value'); //id 
+            var boolValue = $('#' + id).text(); //get bool value
 
 
-            var IDitem = row.getAttribute('value');
-            var boolValue = $('#' + IDitem).text(); //get bool value
-            console.log(boolValue);
 
-            if (boolValue = 'False') {
-                //console.log(boolValue);
-                $(IDitem).css("background-color", "#90ee90");
+            if (boolValue == 'True') {
+                $("#eintragen_" + id).prop("checked", true);
+                $(row).css("background-color", "#90ee90");
             }
-            else if (boolValue = 'True') {
-                $(IDitem).css("background-color", "#ffcccb");
+            if (boolValue == 'False') {
+                $("#eintragen_" + id).prop("checked", false)
 
+                $(row).css("background-color", "#ffcccb");
             }
         }
 
@@ -242,23 +250,31 @@
 
             $('[id^=eintragen_]').click(function () {
 
-                var id =  $(this).attr('value'); // get ID
+                var id = $(this).attr('value'); // get ID
                 var boolValue = $('#' + id).text(); //get bool value
 
-                // row.toggleClass("active");
-                if (boolValue = 'True') {
-                    var row = $(this).closest("tr");
-                    $(row).css("background-color", "#90ee90");
-                }
-
+                var row = $(this).closest("tr");
                 console.log(boolValue);
+
+                //console.log(boolValue);
 
                 $.getJSON(url, { istEingetragen: boolValue, id: id }, function (response) {
 
                     if (response == 0) {
                         alert('Das lief schief. Aktualisiere die Seite und versuhce es erneut.')
                     }
-            });
+                });
+
+                if (boolValue == 'True') {
+                    $(row).css("background-color", "#ffcccb");
+                    $('#' + id).text('False');
+                }
+                else if (boolValue == 'False') {
+                    $(row).css("background-color", "#90ee90");
+                    $('#' + id).text('True');
+
+
+                }
         });
 
         });
