--- a/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
+++ b/ZeiterfassungPierburg/Views/MitarbeiterInSchicht/IndexMEBA.cshtml
@@ -67,9 +67,10 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Bemerkung)
                             </th>
-                            <!--<td>
-        @Html.DisplayFor(modelItem => item.Auswertung)%
-    </td>
+                            <!--
+    <th>
+        @Html.DisplayNameFor(model => model.Auswertung)
+    </th>
         -->
 
                             <th></th>
@@ -115,9 +116,11 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.Bemerkung)
                             </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Auswertung)%
-                            </td>
+                            <!--
+        <td>
+        @Html.DisplayFor(modelItem => item.Auswertung)%
+    </td>
+        -->
                             <td>
                                 @Html.ActionLink("Bearbeiten", "Edit", new { id = item.ID }) |
                                 @Html.ActionLink("Löschen", "Delete", new { id = item.ID }, new { onclick = "return confirm('Wirklich löschen?');" })
